Agregar seguridad con parametros de entorno 2